eks-deployment-setup/traefik/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
  namespace: job-application-microservices
spec:
  controller: traefik.io/ingress-controller
