eks-deployment-setup/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: job-application-microservices
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: websecure
      port: 443
      targetPort: 443
    - name: admin
      port: 8080
      targetPort: 8080
  selector:
    app: traefik
